@@ -16,7 +16,6 @@ from util import *
 from docutils import frontend, utils, nodes
 from docutils.parsers import rst
 
-from sphinx import addnodes
 from sphinx.util import texescape
 from sphinx.writers.html import HTMLWriter, SmartyPantsHTMLTranslator
 from sphinx.writers.latex import LaTeXWriter, LaTeXTranslator
